infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-depl
spec:
  replicas: 1 # no of pods
  selector: # find all pods with a label "app:posts" ("app" does not have any special meaning: can use other word instead)
    matchLabels: 
      app: event-bus
  template: # pod configuration
    metadata: # give the pod label "app: posts"
      labels:
        app: event-bus
    spec: 
      containers: 
        - name: event-bus
          image: agz87/event-bus
