infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec:
  replicas: 1 # no of pods
  selector: # find all pods with a label "app:client" ("app" does not have any special meaning: can use other word instead)
    matchLabels: 
      app: client
  template: # pod configuration
    metadata: # give the pod label "app: client"
      labels:
        app: client
    spec: 
      containers: 
        - name: client
          image: agz87/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: 
    app: client
  type: ClusterIP # (default, can be omitted)
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000 # because our app is listening on port 3000
