infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation-depl
spec:
  replicas: 1 # no of pods
  selector: # find all pods with a label "app:posts" ("app" does not have any special meaning: can use other word instead)
    matchLabels: 
      app: moderation
  template: # pod configuration
    metadata: # give the pod label "app: posts"
      labels:
        app: moderation
    spec: 
      containers: 
        - name: moderation
          image: agz87/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector: 
    app: moderation
  type: ClusterIP # (default, can be omitted)
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003 # because our app is listening on port 4005
