infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec: 
  type: NodePort
  selector:
    app: posts # Find all pods with a label app:posts and expose them to the outside world
  ports: 
    - name: posts
      protocol: TCP
      port: 4000 # port of the NodePort service (does not have to be the same as the targetPort, but there is no reason to make it different)
      targetPort: 4000 # because our app is listening on port 4000
